perf(aeron): remove redundant ordered hot-path containers